--- a/prologin/mailing/templates/mailing/template/details.html
+++ b/prologin/mailing/templates/mailing/template/details.html
@@ -86,17 +86,17 @@
               <a href="#preview-html" aria-controls="preview-html" role="tab"
                  data-toggle="tab">{% trans "HTML" %}</a></li>
             <li class="pull-right">
-              <div class="input-group" style="width: 190px">
-                <span class="input-group-btn">
+              {# <div class="input-group">#}
+                <span class="btn-group">
                   <button type="button" class="btn btn-default" id="btn-page-previous">
                     <i class="fa fa-angle-left"></i></button>
-                </span>
-                <input type="search" id="search-input" class="form-control" placeholder="{% trans "Search" %}"/>
-                <span class="input-group-btn">
+                  {# </span> #}
+                  {# <input type="search" id="search-input" class="form-control" placeholder="{% trans "Search" %}"/> #}
+                  {# <span class="input-group-btn"> #}
                   <button type="button" class="btn btn-default" id="btn-page-next">
                     <i class="fa fa-angle-right"></i></button>
                 </span>
-              </div>
+              {# </div>#}
             </li>
             <li class="pull-right" style="line-height: 34px; padding-right: 1em">
               <input type="number" min="1" id="result-page" style="width: 4em; text-align: right; border: none; outline: none; background: none">
