--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -25,8 +25,10 @@
 
   <meta name="description" content="{% block meta_descr %}{% endblock %}">
 
+  {# Social stuff #}
   <meta property="og:site_name" content="{% trans "Prologin" %}"/>
   <meta property="og:title" content="{% trans "Prologin, the French National Computer Science Contest" %}"/>
+  <meta property="og:url" content="{% get_setting 'SITE_BASE_URL' %}"/>
   <meta property="og:description" content="{% trans "Prologin is a computer science contest. Our goal is to introduce students to the world of programming and algorithms by subjecting them to several conventional problems and exciting challenges." %}"/>
   <meta property="og:type" content="website"/>
   <meta property="og:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/apple-touch-icon-180.png' %}?og20160216"/>
@@ -36,6 +38,14 @@
   <meta property="og:locale" content="{{ LANGUAGE_CODE }}"/>
   {% get_available_languages as LANGUAGES %}
   {% for code, language in LANGUAGES %}{% if code != LANGUAGE_CODE %}<meta property="og:locale:alternate" content="{{ code }}"/>{% endif %}{% endfor %}
+  <meta property="fb:app_id" content="166681023395097">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@prologin">
+  <meta name="twitter:creator" content="@prologin">
+  <meta name="twitter:url" content="{% get_setting 'SITE_BASE_URL' %}">
+  <meta name="twitter:title" content="{% trans "Prologin" %}">
+  <meta name="twitter:description" content="{% trans "Prologin is a computer science contest, introducing students to the world of programming and algorithms with exciting challenges." context "Twitter message, LESS THAN 140 CHARS" %}">
+  <meta name="twitter:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/apple-touch-icon-180.png' %}?og20160216">
 
 {% include "prologin/favicons.html" %}
 
