--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -31,7 +31,7 @@
   <meta property="og:url" content="{% get_setting 'SITE_BASE_URL' %}"/>
   <meta property="og:description" content="{% trans "Prologin is a computer science contest. Our goal is to introduce students to the world of programming and algorithms by subjecting them to several conventional problems and exciting challenges." %}"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/apple-touch-icon-180.png' %}?og20160216"/>
+  <meta property="og:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/mstile-310x310.png' %}?20160630"/>
   <meta property="og:image:type" content="image/png"/>
   <meta property="og:image:width" content="180"/>
   <meta property="og:image:height" content="180"/>
@@ -45,7 +45,7 @@
   <meta name="twitter:url" content="{% get_setting 'SITE_BASE_URL' %}">
   <meta name="twitter:title" content="{% trans "Prologin" %}">
   <meta name="twitter:description" content="{% trans "Prologin is a computer science contest, introducing students to the world of programming and algorithms with exciting challenges." context "Twitter message, LESS THAN 140 CHARS" %}">
-  <meta name="twitter:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/apple-touch-icon-180.png' %}?og20160216">
+  <meta name="twitter:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/mstile-310x310.png' %}?20160630">
 
 {% include "prologin/favicons.html" %}
 
