--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -19,6 +19,10 @@
   background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
 }
 
+.home-jumbo h1 {
+  margin-top: 0;
+}
+
 @media screen and (max-width: 768px) {
   .home-jumbo {
     padding: 0 0 1em;
