--- a/prologin/homepage/templates/homepage/jumbotron.html
+++ b/prologin/homepage/templates/homepage/jumbotron.html
@@ -16,7 +16,7 @@
             <i class="fa fa-chevron-right" style="left: 75%"></i>
           </div>
         </div>
-      {% with edition=request.current_edition contestant=request.current_contestant qualif=request.current_events.qualification semifinals=request.current_events.semifinal firstsemi=request.current_events.semifinal|first lastsemi=request.current_events.semifinal|last final=request.current_events.final %}
+      {% with edition=request.current_edition phase=request.current_edition.phase contestant=request.current_contestant qualif=request.current_events.qualification semifinals=request.current_events.semifinal firstsemi=request.current_events.semifinal|first lastsemi=request.current_events.semifinal|last final=request.current_events.final %}
         {% include "homepage/jumbotron-qualification.html" %}
         {% include "homepage/jumbotron-semifinals.html" %}
         {% include "homepage/jumbotron-final.html" %}
