--- a/prologin/homepage/static/css/homepage.css
+++ b/prologin/homepage/static/css/homepage.css
@@ -5,18 +5,14 @@
   padding: 0 0 3em;
   position: relative;
 }
+
 .home-jumbo:after {
   content: "";
   width: 100%;
   height: 50px;
   position: absolute;
   bottom: 0;
-  background: -moz-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.15)));
-  background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
-  background: -o-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
-  background: -ms-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
-  background: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(0,0,0,0.15) 100%);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.15) 100%);
 }
 
 .home-jumbo h1 {
@@ -66,6 +62,7 @@
     margin: 0 0 1em 0 !important;
     min-height: 6.5em;
   }
+
   .home-jumbo .tl-block .desc {
     margin: 0 !important;
   }
@@ -88,6 +85,7 @@
   width: 100%;
   margin-top: 57px;
 }
+
 .home-jumbo .line > i {
   position: absolute;
   top: -10px;
@@ -110,9 +108,11 @@
 .home-jumbo .tl-block p {
   font-size: 1em;
 }
+
 .home-jumbo .tl-block p:last-child {
   margin-bottom: 0;
 }
+
 .home-jumbo .tl-block .desc .signin {
   margin: 0.5em 0 0;
 }
@@ -152,14 +152,9 @@
   font-size: inherit;
 }
 
-.home-jumbo .tl-block .desc .dates-link {
-  margin-bottom: 0;
-}
-
 .home-jumbo .tl-block .desc .dates-link a {
   color: inherit;
 }
-
 
 .home-jumbo .tl-block h4 {
   font-size: 1.4em;
@@ -189,6 +184,7 @@
 .hide-no-active {
   display: none;
 }
+
 .active .hide-no-active {
   display: block;
 }
@@ -200,11 +196,13 @@
   border-radius: 3px;
   color: #333;
 }
+
 .checklist > li > a,
 .checklist > li > a:visited {
   text-decoration: none;
   color: inherit;
 }
+
 .checklist > li > a > i {
   vertical-align: middle;
   padding-right: 0.3em;
