--- a/prologin/prologin/templates/stub-mathjax.html
+++ b/prologin/prologin/templates/stub-mathjax.html
@@ -1,3 +1,13 @@
 {% load staticfiles %}
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
+      processEscapes: true
+    },
+    "HTML-CSS": { availableFonts: ["TeX"] },
+    showMathMenu: false,
+  });
+</script>
 <script type="text/javascript" src="{% static 'lib/mathjax/MathJax.js' %}?config=TeX-AMS-MML_HTMLorMML"></script>
-<script type="text/javascript">MathJax.Hub.Config({"HTML-CSS": {scale: '82%'}});</script>
