--- a/prologin/prologin/templates/stub-mathjax.html
+++ b/prologin/prologin/templates/stub-mathjax.html
@@ -6,7 +6,7 @@
       displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
       processEscapes: true
     },
-    "HTML-CSS": { availableFonts: ["TeX"] },
+    "HTML-CSS": { availableFonts: ["TeX"], scale: 85 },
     showMathMenu: false,
   });
 </script>
