--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -33,7 +33,7 @@
   <meta property="og:url" content="{% get_setting 'SITE_BASE_URL' %}"/>
   <meta property="og:description" content="{{ social_description }}"/>
   <meta property="og:type" content="website"/>
-  <meta property="og:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/mstile-310x310.png' %}?20160630"/>
+  <meta property="og:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/mstile-310x310.png' %}"/>
   <meta property="og:image:type" content="image/png"/>
   <meta property="og:image:width" content="180"/>
   <meta property="og:image:height" content="180"/>
@@ -46,7 +46,7 @@
   <meta name="twitter:url" content="{% get_setting 'SITE_BASE_URL' %}">
   <meta name="twitter:title" content="{% trans "Prologin" %}">
   <meta name="twitter:description" content="{{ social_description }}">
-  <meta name="twitter:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/mstile-310x310.png' %}?20160630">
+  <meta name="twitter:image" content="{% get_setting 'SITE_BASE_URL' %}{% static 'img/mstile-310x310.png' %}">
 
 {% include "prologin/favicons.html" %}
 
