templates: fix ace library not loading caused by manifest storage

--- a/prologin/mailing/templates/mailing/template/details.html
+++ b/prologin/mailing/templates/mailing/template/details.html
@@ -1,6 +1,6 @@
 {% extends "prologin/base.html" %}
 {% load i18n staticfiles %}
-{% load bootstrap django_bootstrap_breadcrumbs %}
+{% load bootstrap django_bootstrap_breadcrumbs utils %}
 
 {% block title %}{% if template %}{{ template.name }}{% else %}{% trans "New template" %}{% endif %} – {% trans "Mailing" %}{% endblock %}
 
@@ -133,11 +133,11 @@
   </script>
   <script type="text/javascript" charset="utf-8" src="{% static 'js/utils.js' %}"></script>
   <script type="text/javascript" charset="utf-8" src="{% static 'lib/js/select2.min.js' %}"></script>
-  <script type="text/javascript" charset="utf-8"
-          src="{% static 'problems/lib/ace/src-min-noconflict/ace.js' %}"></script>
-  <script type="text/javascript" charset="utf-8"
-          src="{% static 'problems/lib/ace/src-min-noconflict/ext-themelist.js' %}"></script>
-  <script type="text/javascript" charset="utf-8"
-          src="{% static 'problems/lib/ace/src-min-noconflict/ext-language_tools.js' %}"></script>
+  {# <script type="text/javascript" charset="utf-8" src="{% static 'problems/lib/ace/src-min-noconflict/ace.js' %}"></script> #}
+  <script type="text/javascript" charset="utf-8" src="{% get_setting 'STATIC_URL' %}/problems/lib/ace/src-min-noconflict/ace.js"></script>
+  {# <script type="text/javascript" charset="utf-8" src="{% static 'problems/lib/ace/src-min-noconflict/ext-themelist.js' %}"></script> #}
+  <script type="text/javascript" charset="utf-8" src="{% get_setting 'STATIC_URL' %}/problems/lib/ace/src-min-noconflict/ext-themelists.js"></script>
+  {# <script type="text/javascript" charset="utf-8" src="{% static 'problems/lib/ace/src-min-noconflict/ext-language_tools.js' %}"></script> #}
+  <script type="text/javascript" charset="utf-8" src="{% get_setting 'STATIC_URL' %}/problems/lib/ace/src-min-noconflict/ext-language_tools.js"></script>
   <script type="text/javascript" charset="utf-8" src="{% static 'mailing/template-editor.js' %}"></script>
 {% endblock %}
