--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -129,9 +129,6 @@
               <a href="{% url 'documents:final:badges' year %}" class="btn btn-default btn-xs">
                 <i class="fa fa-ticket"></i> {% trans "Badges" %}
               </a>
-              <a href="{% url 'documents:final:organizer-badges-input' year %}" class="btn btn-default btn-xs">
-                <i class="fa fa-ticket"></i> {% trans "Organizer Bagdes" %}
-              </a>
             </td>
           </tr>
         </tbody>
@@ -157,16 +154,28 @@
               </a>
             </td>
           </tr>
-          <td>
-            <strong>{% trans "Meal tickets" %}</strong>
-          </td>
-          <td>
-            <form class="form-inline" action="{% url 'documents:final:meal-tickets-input' year %}" method="post">
-              {% csrf_token %}
-              {{ form|bootstrap }}
-              <input type="submit" value="{% trans "Submit" %}" class="btn btn-default btn-s" style="position: relative; top: 11px;"/>
-            </form>
-          </td>
+          <tr>
+            <td>
+              <strong>{% trans "Meal tickets" %}</strong>
+            </td>
+            <td>
+              <form class="form-inline" action="{% url 'documents:final:meal-tickets-input' year %}" method="post">
+                {% csrf_token %}
+                {{ form|bootstrap }}
+                <input type="submit" value="{% trans "Submit" %}" class="btn btn-default btn-s" style="position: relative; top: 11px;"/>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <strong>{% trans "Misc" %}</strong>
+            </td>
+            <td>
+              <a href="{% url 'documents:final:custom-badges-input' year %}" class="btn btn-default btn-xs">
+                <i class="fa fa-ticket"></i> {% trans "Custom Bagdes" %}
+              </a>
+           </td>
+          </tr>
         </tbody>
       </table>
 
