locale: fix typo & update

--- a/prologin/documents/templates/documents/index.html
+++ b/prologin/documents/templates/documents/index.html
@@ -175,7 +175,7 @@
             </td>
             <td>
               <a href="{% url 'documents:final:custom-badges-input' year %}" class="btn btn-default btn-xs">
-                <i class="fa fa-ticket"></i> {% trans "Custom Bagdes" %}
+                <i class="fa fa-ticket"></i> {% trans "Custom Badges" %}
               </a>
            </td>
           </tr>
