s/EU/Europe/ for moar Switzerland.

--- a/prologin/pages/templates/pages/about-contest.html
+++ b/prologin/pages/templates/pages/about-contest.html
@@ -41,7 +41,7 @@ It is possible to submit the questionnaire by postal mail or directly on this we
       <p>{% trans "Registration is entirely free, you only need an Internet access to submit your answers." %}</p></div>
       <div class="col-sm-4">
         <h4>{% trans "Who can qualify?" %}</h4>
-        <p>{% trans "Any student under 21, living in the European Union, who can understand and write French." %}</p>
+        <p>{% trans "Any student under 21, living in Europe, who can understand and write French." %}</p>
         <p>{% trans "Students from EPITA/EPITECH are not allowed to participate." %}</p>
         <p><a href="{% url 'pages:about-qualification' %}" class="btn btn-default">{% trans "Learn more" %}</a></p>
       </div>
