qcm: add id to questions so it can be anchored

--- a/prologin/prologin/templates/prologin/base.html
+++ b/prologin/prologin/templates/prologin/base.html
@@ -94,9 +94,7 @@
 
     {% include "prologin/messages.html" %}
 
-    {% block content %}
-
-    {% endblock %}
+    {% block content %}{% endblock %}
   </div>
   {% endblock super_content %}
 
